# LinwisEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Prikol.cpp  README.md
engine/: Camera.cpp  CreateBaseGeometry.cpp  Cube.cpp  LinwisEngine.cpp  Mesh.cpp  Object3D.cpp  Renderer.cpp
engine/include/lw/core/: Application.h  Camera.h  CreateBaseGeometry.h  Geometry.h  LinwisEngine.h  Mesh.h  Object3D.h  Paths.h  PathsConfig.h.in  Renderer.h
engine/include/lw/graphics/: Clip.h  GraphicsTypes.h  Rasterizer.h  RenderableObject.h  Renderer.h  Texture.h
engine/include/lw/helpers/: AxesHelper.h  LoadObj.h
engine/include/lw/math/: Math.h  Matrix4.h  (+5 more)
engine/src/core/: Application.cpp  Camera.cpp  CreateBaseGeometry.cpp  LinwisEngine.cpp  Mesh.cpp  Object3D.cpp  Renderer.cpp
engine/src/graphics/: Clip.cpp  Rasterizer.cpp  Renderer.cpp
engine/src/helpers/: AxesHelper.cpp  LoadObj.cpp  stb_image.cpp
engine/src/math/: Math.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Vector3.cpp  Vector4.cpp
engine/src/scene/: Camera.cpp  CreateBaseGeometry.cpp  Mesh.cpp  Object3D.cpp  Scene.cpp
engine/test/: Test.cpp  Vector3_test.cpp  helper.cpp  lookAt_test.cpp
game/: game.cpp
headers/: Camera.h  CreateBaseGeometry.h  Cube.h  FrameBuffer.h  Geometry.h  LinwisEngine.h  Material.h  Math.h  Matrix4.h  Mesh.h  Object3D.h  Plane.h  Quaternion.h  RenderTarget.h  Renderer.h  Vector3.h  Vector4.h
math/: Math.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Vector3.cpp
platform/win32/: Win32Main.cpp  Win32Window.cpp
platform/win32/headers/: Win32Window.h
test/: TestHelpers.h
(+12 files in other folders)
